--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ h1{
 }
 
 img {
-  width: 25vw;
-  margin: 20px;
-  border: dotted .5px #FFEA2D
+  width: 40vw;
+  margin: 10px;
+  border: dotted 4px #FFEA2D
 }
