--- a/style.css
+++ b/style.css
@@ -7,7 +7,9 @@ h1{
 }
 
 img {
-  width: 40vw;
-  margin: 10px;
+  display: block;
+  width: 60%;
+  margin-left: auto;
+  margin-right: auto;
   border: dotted 4px #FFEA2D
 }
