--- a/style.css
+++ b/style.css
@@ -106,6 +106,7 @@ h5 {
 
 #Goals {
   background-color: #053A53;
+  margin-left: 20
   color: white;
   font-family: Fjalla One;
   text-align: center;
