--- a/style.css
+++ b/style.css
@@ -102,15 +102,15 @@ h5 {
   font-size: 20px;
   text-align: center;
   background-color: #053A53;
-  padding: 5px
+  padding: 10px;
 }
 
 #Goals {
   color: white;
   background-color: #053A53;
-  margin-left: 20
+  margin-left: 20;
   font-family: Fjalla One;
   text-align: center;
-  padding: 5px
+  padding: 5px;
   /* border: solid 1px #053A53; */
 }
