--- a/Week8/style.css
+++ b/Week8/style.css
@@ -1,3 +1,50 @@
 body {
-  background-color; black;
+  background-color: tan;
+}
+
+h1 {
+  font-family: 'Limelight', cursive;
+  color: white;
+  text-align: center;
+  font-size: 40pt;
+}
+
+.filmstrip {
+  --background: rgba(0, 0, 0, .35);
+  --size: 10px;
+  background-image:
+    linear-gradient(to right, var(--background) var(--size), transparent var(--size)),
+    linear-gradient(to bottom, var(--background) var(--size), transparent var(--size)),
+    linear-gradient(to right, var(--background) var(--size), transparent var(--size)),
+    linear-gradient(to bottom, var(--background) var(--size), transparent var(--size)),
+    linear-gradient(to bottom, transparent var(--size), var(--background) var(--size));
+  background-size: calc(var(--size) * 2) var(--size), calc(var(--size) * 2) var(--size), calc(var(--size) * 2) var(--size), calc(var(--size) * 2) var(--size), 100% calc(100% - var(--size) * 3);
+  background-repeat: repeat-x;
+  background-position: 0 var(--size), top left, 0 calc(100% - var(--size)), bottom left, 0 var(--size);
+  padding: calc(var(--size) * 3) calc(var(--size) * 2.5);
+  box-sizing: border-box;
+}
+
+div {
+  height: 50vh;
+  width: 100%;
+  color: white;
+}
+
+#quotesection {
+  background-color: white;
+  color: black;
+  margin: 10vh 10vw;
+  padding: 5vh 5vw;
+  border-radius: 8px;
+  font-family: 'futura';
+}
+
+h2 {
+  font-family: 'Limelight', cursive;
+  margin: 0;
+  padding: 3;
+  line-height: 1;
+  text-align: center;
+  font-size: 20pt;
 }
