--- a/Week8/style.css
+++ b/Week8/style.css
@@ -1,12 +1,16 @@
-body {
+body{
   background-color: tan;
 }
 
-h1 {
+h1{
   font-family: 'Limelight', cursive;
-  color: white;
+  color: tan;
   text-align: center;
-  font-size: 40pt;
+  font-size: 50pt;
+  text-shadow: -1px -1px 0 white,
+     1px -1px 0 white,
+     -1px 1px 0 white,
+    1px 1px 0 white;
 }
 
 .filmstrip {
@@ -25,26 +29,26 @@ h1 {
   box-sizing: border-box;
 }
 
-div {
+div{
   height: 50vh;
   width: 100%;
   color: white;
 }
 
-#quotesection {
-  background-color: white;
-  color: black;
-  margin: 10vh 10vw;
-  padding: 5vh 5vw;
-  border-radius: 8px;
-  font-family: 'futura';
-}
-
-h2 {
-  font-family: 'Limelight', cursive;
-  margin: 0;
-  padding: 3;
-  line-height: 1;
+#quotes {
+  font-family: 'Limelight', fantasy;
+  color: white;
   text-align: center;
   font-size: 20pt;
+  padding: 8vh;
+}
+
+#action {
+  border-radius: 14px
+  padding: 1vh 3vw
+  float: right;
+  background-color: white;
+  color: black;
+  font-family: 'Limelight', cursive;
+  font-size: 14pt;
 }
