--- a/Self Care/style.css
+++ b/Self Care/style.css
@@ -1,5 +1,5 @@
 body{
-  background-color: #F2E6D8;
+  background-color: #1B1B1B;
   /* background-image: url("assets/solo.webp"); */
   background-repeat: no-repeat;
   background-position: top;
@@ -10,11 +10,11 @@ body{
   font-family: 'Zen Kurenaido', sans-serif;
   font-size: 20px;
   margin-left: 20px;
-  color: black;
+  color: #F3F3F3;
 }
 
 h1 {
-  color: black;
+  color: #E1E1E1;
   font-family: 'Reenie Beanie', cursive;
   font-size: 100px;
   font-weight: bold;
@@ -28,7 +28,7 @@ h1 {
   margin: 24px;
   width: 100px;
   height: 100px;
-  background: white;
+  background: #D96F32;
   opacity: 100%;
   border-radius: 50%;
   margin-top: 0p;
@@ -67,7 +67,7 @@ h1 {
   flex-grow: 1;
   width: auto;
   border: 1px solid #aaa;
-  background-color: white;
+  background-color: #F3F3F3;
 }
 
 #image, .menu{
@@ -88,9 +88,32 @@ h2 {
 }
 
 .active{
-  background-color: white;
+  background-color: #141414;
   border-bottom; none;
+  color: white;
 }
+
+h3, h4, h5{
+  margin-left: -540pt;
+  font-family: 'Zen Kurenaido', sans-serif;
+  text-align: center;
+}
+
+h3 {
+  font-size: 25pt;
+  color: #F3F3F3
+}
+
+h4 {
+  font-size: 20pt;
+  color: #D96F32
+}
+
+h5{
+  font-size: 15pt;
+  color: #E1E1E1
+}
+
 
 /*
 img{
