--- a/MADWORN/style.css
+++ b/MADWORN/style.css
@@ -206,6 +206,10 @@ a:active{
  }
 
  #demo{
+   display: block;
+   font-size: 20px;
+   margin-left: auto;
+   margin-right: auto;
    text-align: center;
    color: black;
  }
